@@ -54,6 +54,9 @@ Tactics
   with let bindings in the parameters.
 - The tactic "dtauto" now handles some inductives such as
   "@sigT A (fun _ => B)" as non-dependent conjunctions.
+- A bug fixed in "rewrite H in *" and "rewrite H in * |-" may cause a
+  few rare incompatibilities (it was unintendedly recursively
+  rewriting in the side conditions generated by H).
 
 Focusing
 
